spring-boot-whoami/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-whoami
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: spring-boot-whoami
